5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1752_1530.log
== TEST (2019-05-16 17:10:10) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

espaco = 80000
anos = 0

totalper = qper1 + (qper1 * pper)
totalvar = qvar1 + (qvar1 * pvar)

while ((totalper + totalvar) < espaco):
	anos += 1
	
print(anos)
-- OUTPUT:
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:10:38) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

espaco = 80000
anos = 0

totalper = qper1 + (qper1 * pper)
totalvar = qvar1 + (qvar1 * pvar)

while ((totalper + totalvar) < espaco):
	anos += 1
	
print(anos)
-- OUTPUT:
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:11:54) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

espaco = 80000
anos = 0

while ((totalper + totalvar) < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = pvar1 + (qvar1 * pvar)
	anos += 1
	
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while ((totalper + totalvar) < espaco):
NameError: name 'totalper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:13:04) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = pvar1 + (qvar1 * pvar)
	anos += 1
	
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    totalvar = pvar1 + (qvar1 * pvar)
NameError: name 'pvar1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:13:47) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = pvar1 + (qvar1 * pvar)
	anos += 1
	
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    totalvar = pvar1 + (qvar1 * pvar)
NameError: name 'pvar1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:20:03) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = pvar1 + (qvar1 * pvar)
	anos = anos + 1
	cont += 1
	
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    totalvar = pvar1 + (qvar1 * pvar)
NameError: name 'pvar1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:20:40) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos = anos + 1
	cont += 1
	
print(anos)
-- OUTPUT:
80000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:21:11) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos = anos + 1
	cont += 1
	
print(anos)
-- OUTPUT:
80000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:23:04) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += 1
	espaco = espaco - (totalper + totalvar)
	
print(anos)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:23:06) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += 1
	espaco = espaco - (totalper + totalvar)
	
print(anos)
-- EXECUTION TIME:
0.217274
-- TEST CASE 1:
---- input:
1500
1000
1.3
2.3
---- correct output:
183
---- user output:
32
-- TEST CASE 2:
---- input:
1200
100
2.3
25.3
---- correct output:
30
---- user output:
50
-- TEST CASE 3:
---- input:
3200
120
25.6
25.6
---- correct output:
14
---- user output:
20
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:23:09) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += 1
	espaco = espaco - (totalper + totalvar)
	
print(anos)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:24:14) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += 1
	espaco = espaco + (totalper + totalvar)
	
print(anos)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:25:06) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 * pvar
	totalvar = qvar1 * pvar
	anos += 1
	cont += 1
	espaco = espaco - (totalper + totalvar)
	
print(anos)
-- OUTPUT:
2389
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:25:15) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 * pvar
	totalvar = qvar1 * pvar
	anos += 1
	cont += 1
	espaco = espaco - (totalper + totalvar)
	
print(anos)
-- OUTPUT:
2389
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:25:49) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont <= espaco):
	totalper = qper1 * pvar
	totalvar = qvar1 * pvar
	anos += 1
	cont += 1
	espaco = espaco - (totalper + totalvar)
	
print(anos)
-- OUTPUT:
2389
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:26:56) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont <= espaco):
	totalper = qper1 + (qper1 * pvar)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += 1
	espaco = espaco + (totalper + totalvar)
	
print(anos)
-- OUTPUT:
2389
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:27:20) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pvar)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += 1
	espaco = espaco + (totalper + totalvar)
	
print(anos)
-- OUTPUT:
2389
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:27:53) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade inicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pvar)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += 1
	espaco = espaco + (totalper + totalvar)
	
print(anos)
-- OUTPUT:
2389
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:28:42) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade inicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

espacoinicial = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pvar)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	espacoinicial += 1
	espaco = espacoinicial + (totalper + totalvar)
	
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while (cont < espaco):
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:29:05) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade inicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

espacoinicial = 0
espaco = 80000
anos = 0

while (espacoinicial < espaco):
	totalper = qper1 + (qper1 * pvar)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	espacoinicial += 1
	espaco = espacoinicial + (totalper + totalvar)
	
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while (cont < espaco):
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:30:55) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade inicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

quantidade = qper1 + qvar1
espaco = 80000
anos = 0

while (quantidade < espaco):
	totalper = qper1 + (qper1 * pvar)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	espaco = totalper + totalvar
	
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while (cont < espaco):
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:31:07) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade inicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

quantidade = qper1 + qvar1
espaco = 80000
anos = 0

while (quantidade < espaco):
	totalper = qper1 + (qper1 * pvar)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	espaco = totalper + totalvar
	
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while (cont < espaco):
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:31:52) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade inicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

quantidade = qper1 * pper + qvar1 * pvar
espaco = 80000
anos = 0

while (quantidade < espaco):
	totalper = qper1 + (qper1 * pvar)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	espaco = totalper + totalvar
	
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while (cont < espaco):
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:32:47) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += 1
	espaco = espaco - (totalper + totalvar)
	
print(anos)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:33:16) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += 1
	espaco = espaco + (totalper + totalvar)
	
print(anos)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:33:45) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += 1
	espaco = espaco
	
print(anos)
-- OUTPUT:
80000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:03) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += 1
	espaco = espaco - (totalper + totalvar)
	
print(anos)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:40) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += 1
	espaco = espaco - (totalper + totalvar)
	
print(anos)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:51) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += 1
	espaco = espaco - (totalper + totalvar)
	
print(anos)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:35:06) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = 0
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += 1
	espaco = espaco - (totalper + totalvar)
	
print(anos)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:37:47) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = qper1 * pper + qvar1 * pvar
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += qper1 * pper + qvar1 * pvar
	espaco = espaco - (totalper + totalvar)
	
print(anos)
-- OUTPUT:
31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:38:46) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = qper1 * pper + qvar1 * pvar
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += qper1 * pper + qvar1 * pvar
	
	
print(anos)
-- OUTPUT:
1684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:39:32) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = (qper1 * pper) + (qvar1 * pvar)
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += (qper1 * pper) + (qvar1 * pvar)
	
	
print(anos)
-- OUTPUT:
1684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:40:47) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = (qper1 * pper) + (qvar1 * pvar)
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += (qper1 * pper) + (qvar1 * pvar)
	espaco = totalper + totalvar - 80000
	
	
print(anos)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:41:23) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = (qper1 * pper) + (qvar1 * pvar)
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += (qper1 * pper) + (qvar1 * pvar)
	espaco = espaco - cont
	
	
print(anos)
-- OUTPUT:
56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:41:37) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = (qper1 * pper) + (qvar1 * pvar)
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += (qper1 * pper) + (qvar1 * pvar)
	espaco = espaco - cont
	
	
print(anos)
-- OUTPUT:
56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:41:48) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = (qper1 * pper) + (qvar1 * pvar)
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += (qper1 * pper) + (qvar1 * pvar)
	espaco = espaco - cont
	
	
print(anos)
-- EXECUTION TIME:
0.164568
-- TEST CASE 1:
---- input:
1500
1000
1.3
2.3
---- correct output:
183
---- user output:
56
-- TEST CASE 2:
---- input:
1200
100
2.3
25.3
---- correct output:
30
---- user output:
21
-- TEST CASE 3:
---- input:
3200
120
25.6
25.6
---- correct output:
14
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:41:51) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = (qper1 * pper) + (qvar1 * pvar)
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += (qper1 * pper) + (qvar1 * pvar)
	espaco = espaco - cont
	
	
print(anos)
-- OUTPUT:
56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:42:55) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))
pper = float(input("Percentual de crescimento de pergaminhos: "))

cont = (qper1 * pper) + (qvar1 * pvar)
espaco = 80000
anos = 0

while (cont < espaco):
	totalper = qper1 + (qper1 * pper)
	totalvar = qvar1 + (qvar1 * pvar)
	anos += 1
	cont += (qper1 * pper) + (qvar1 * pvar)
	espaco = espaco - cont
	
	
print(anos)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:43:58) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = (qper1 * pper) + (qvar1 * pvar)
espaco = 80000
anos = 0

while (cont < espaco):
	anos += 1
	cont += (qper1 * pper) + (qvar1 * pvar)
	
	
	
print(anos)
-- OUTPUT:
1684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:45:02) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = (qper1 * pper) + (qvar1 * pvar)
espaco = 80000
anos = 0

while (espaco >= cont):
	anos += 1
	cont += (qper1 * pper) + (qvar1 * pvar)
	
	
	
print(anos)
-- OUTPUT:
1684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:45:20) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = (qper1 * pper) + (qvar1 * pvar)
espaco = 80000
anos = 0

while (espaco >= cont):
	anos += 1
	cont += (qper1 * pper) + (qvar1 * pvar)
	
	
	
print(anos)
-- OUTPUT:
1684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:47:48) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = (qper1 * pper) + (qvar1 * pvar)
espaco = 80000
anos = 0

while (espaco >= cont):
	if (espaco > cont):
	cont += (qper1 * pper) + (qvar1 * pvar)
	
	else:
		print(anos)
	
	
	
-- ERROR:
File "XXXX", line 12
    cont += (qper1 * pper) + (qvar1 * pvar)
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:52:13) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = (qper1 * pper) + (qvar1 * pvar)
espaco = 80000
anos = 0

while (espaco >= cont):
	anos += 1
	cont += (qper1 * pper) + (qvar1 * pvar)
	
	
	
print(anos)
-- OUTPUT:
1684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:52:59) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = qper1 + (qper1 * pper) + qvar1 + (qvar1 * pvar)
espaco = 80000
anos = 0

while (espaco >= cont):
	anos += 1
	cont += (qper1 * pper) + (qvar1 * pvar)
	
	
	
print(anos)
-- OUTPUT:
1631
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:53:47) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = qper1 + (qper1 * pper) + qvar1 + (qvar1 * pvar)
espaco = 80000
anos = 0

while (espaco >= cont):
	anos += 1

	
	
	
print(anos)
-- OUTPUT:
1631
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:54:22) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = qper1 + (qper1 * pper) + qvar1 + (qvar1 * pvar)
espaco = 80000
anos = 0

while (espaco >= cont):
	anos += 1
	cont = cont
	
	
	
print(anos)
-- OUTPUT:
1631
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:55:03) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = qper1 + (qper1 * pper) + qvar1 + (qvar1 * pvar)
espaco = 80000
anos = 0

while (espaco >= cont):
	anos += 1
	cont += qper1 + (qper1 * pper) + qvar1 + (qvar1 * pvar)
	
	
	
print(anos)
-- OUTPUT:
31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:55:18) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = qper1 + (qper1 * pper) + qvar1 + (qvar1 * pvar)
espaco = 80000
anos = 0

while (espaco >= cont):
	anos += 1
	cont += qper1 + (qper1 * pper) + qvar1 + (qvar1 * pvar)
	
	
	
print(anos)
-- EXECUTION TIME:
0.145178
-- TEST CASE 1:
---- input:
1500
1000
1.3
2.3
---- correct output:
183
---- user output:
31
-- TEST CASE 2:
---- input:
1200
100
2.3
25.3
---- correct output:
30
---- user output:
49
-- TEST CASE 3:
---- input:
3200
120
25.6
25.6
---- correct output:
14
---- user output:
19
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:55:21) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = qper1 + (qper1 * pper) + qvar1 + (qvar1 * pvar)
espaco = 80000
anos = 0

while (espaco >= cont):
	anos += 1
	cont += qper1 + (qper1 * pper) + qvar1 + (qvar1 * pvar)
	
	
	
print(anos)
-- OUTPUT:
31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:05) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = qper1 + (qper1 * pper) + qvar1 + (qvar1 * pvar)
espaco = 80000
anos = 0

while (espaco >= cont):
	anos += 1
	cont =espaco - qper1 + (qper1 * pper) + qvar1 + (qvar1 * pvar)
	
	
	
print(anos)
-- OUTPUT:
31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:24) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = qper1 + (qper1 * pper) + qvar1 + (qvar1 * pvar)
espaco = 80000
anos = 0

while (espaco >= cont):
	anos += 1
	cont += qper1 + (qper1 * pper) + qvar1 + (qvar1 * pvar)
	
	
	
print(anos)
-- OUTPUT:
31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:49) 
-- CODE:
qper1 = int(input("Quantidade inicial de pergaminhos: "))
qvar1 = int(input("Quantidade oinicial de varinhas: "))
pvar = float(input("Percentual de crescimento de varinhas: "))/100
pper = float(input("Percentual de crescimento de pergaminhos: "))/100

cont = qper1 + (qper1 * pper) + qvar1 + (qvar1 * pvar)
espaco = 80000
anos = 0

while (espaco >= cont):
	anos += 1
	cont += qper1 + (qper1 * pper) + qvar1 + (qvar1 * pvar)
	espaco = espaco - cont
	
	
print(anos)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
